update some known issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&amp;display=swap" rel="stylesheet">
     <title>Delicious-Pizza.com</title>
 </head>
@@ -15,21 +17,18 @@
         <nav id="navbar">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#sec1">Menu</a></li>
+                <li><a href="#MENU">Menu</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <div id="title">
             <h1>
-                THIN
-            </h1>
-            <h1> 
-                CRUST PIZZA
+                THIN<br>CRUST PIZZA
             </h1>
         </div>
         <p>
-            <a href="#sec1">LET'S SEE THE MENU</a>
+            <a href="#MENU">LET'S SEE THE MENU</a>
         </p>
         <div id="openingHours">
             <span>
@@ -37,110 +36,52 @@
             </span>
         </div>
     </header>
-    <h1>
-        THE MENU
-    </h1>
+    <h1 id="MENU">THE MENU</h1>
     <section id="sec1">
         <div class="box">
             <h3>PIZZA</h3>
             <hr>
             <h4>MARGHERITA</h4>
-            <p>
-                Fresh 
-                tomatoes,
-                fresh
-                mozzarella,
-                fresh basil
-            </p>
-            <p>
-                ₹120/-
-            </p>
+            <p>Fresh tomatoes, fresh mozzarella, fresh basil</p>
+            <p>₹120/-</p>
             <hr>
             <h4>CHICKEN</h4>
-            <p>
-                Fresh
-                tomatoes,
-                mozzarella,
-                chicken, onions
-            </p>
-            <p>
-                ₹150/-
-            </p>
+            <p>Fresh tomatoes, mozzarella, chicken, onions</p>
+            <p>₹150/-</p>
             <hr>
             <h4>PARMA </h4>
-            <p> Fresh 
-                tomatoes,
-                mozzarella,
-                parma, bacon,
-                fresh arugula
-            </p>
-            <p>
-                ₹160/-
-            </p>
+            <p> Fresh tomatoes, mozzarella, parma, bacon, fresh arugula</p>
+            <p>₹160/-</p>
         </div>
         <div class="box">
             <h3>SALADS</h3>
             <hr>
             <h4>LASGANA</h4>
-            <p>
-                Special 
-                sauce, 
-                mozzarella, 
-                parmesan, 
-                ground beef
-            </p>
-            <p>
-                ₹90/-
-            </p>
+            <p>Special sauce, mozzarella, parmesan, ground beef</p>
+            <p>₹90/-</p>
             <hr>
             <h4>RAVIOLI </h4>
-            <p>
-                Ravioli 
-                filled with 
-                cheese
-            </p>
-            <p>
-                ₹110/-
-            </p>
+            <p>Ravioli filled with cheese</p>
+            <p>₹110/-</p>
             <hr>
-            <h4>SEAFOOD <br> PASTA  </h4>
-            <p> Salmon, 
-                shrimp, 
-                lobster, 
-                garlic
-            </p>
-            <p>
-                ₹180/-
-            </p>
+            <h4>SEAFOOD <br> PASTA </h4>
+            <p> Salmon, shrimp, lobster, garlic</p>
+            <p>₹180/-</p>
         </div>
         <div class="box">
             <h3>STARTER</h3>
             <hr>
-            <h4>TODAY'S SOUP</h4>  
-            <p>                
-                Ask The Waiter
-            </p>
-            <p>
-                ₹90/-
-            </p>
+            <h4>TODAY'S SOUP</h4>
+            <p>Ask The Waiter</p>
+            <p>₹90/-</p>
             <hr>
             <h4>GARLIC BREAD</h4>
-            <p>
-                Grilled ciabatta, 
-                garlic butter, 
-                onions 
-            </p>
-            <p>
-                ₹100/-
-            </p>
+            <p>Grilled ciabatta, garlic butter, onions</p>
+            <p>₹100/-</p>
             <hr>
             <h4>TOMOZZARELLA</h4>
-            <p> tomatoes and 
-                mozzarella 
-            </p>
-            <p>
-                ₹140/-
-            </p>
+            <p> tomatoes and mozzarella</p>
+            <p>₹140/-</p>
         </div>
     </section>
     <section id="about">
@@ -148,7 +89,10 @@
         <div class="row">
             <div id="article">
                 <p>
-                    The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    The Pizza Restaurant was founded in blabla by Mr. Italiano in lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat.
                 </p>
                 <p class="para">
                     THE CHEF? MR. ITALIANO HIMSELF
@@ -156,13 +100,11 @@
                     WE ARE PROUD OF OUR INTERIORS.
                 </p>
             </div>
-            <aside id="aside" >
+            <aside id="aside">
                 <img src="https://www.w3schools.com/w3images/onepage_restaurant.jpg" alt="rest">
             </aside>
         </div>
-        <h2>
-            OPENINIG HOURS
-        </h2>
+        <h2>OPENINIG HOURS</h2>
         <div id="schedule">
             <div>
                 <ul>
@@ -184,16 +126,15 @@
         <img src="https://www.w3schools.com/w3images/map.jpg" alt="">
     </section>
     <section id="contact">
-        <h3>
-            CONTACT
-        </h3>
+        <h3>CONTACT</h3>
         <p>Find us at some address at some place or call us at 05050515-122330</p>
-        <p> <span>FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
+        <p> <span>FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and
+            we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
         <p>Reserve a table, ask for today's special or just send us a message:</p>
         <form action="">
             <input type="text" name="" placeholder="NAME" id="">
             <input type="number" min="1" max="12" placeholder="HOW MANY PEOPLE" name="" id="">
-            <input type="datetime-local"  name="" placeholder="Date & Time" id="">
+            <input type="datetime-local" name="" placeholder="Date & Time" id="">
             <input type="text" name="" placeholder="MESSAGE\SPECIAL REQUIREMENTS" id="">
         </form>
         <div id="submit" class="row">
